# mission-control-os

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  dev.cmd  dev.ps1  dev.sh  docker-compose.yml  env.example  mission-control-os-build-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  config.py  db.py  dependencies.py  enums.py  main.py  seed.py  versions.py
apps/api/app/models/: __init__.py  agent.py  base.py  core.py  council.py  governance.py  idea.py  mission.py
apps/api/app/prompts/: arty.md  cipher_fable.md  george.md  opus.md  sonnet.md
apps/api/app/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
apps/api/app/routers/: agents.py  approvals.py  council.py  governance.py  health.py  ideas.py  missions.py  runs.py  tools.py
apps/api/app/schemas/: best_part.py  blueprint.py  common.py  council.py  idea.py  mission.py  registry.py
apps/api/app/services/: __init__.py  audit_service.py  council_service.py  mission_service.py  scoring_service.py  synthesis_service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 8356b8dc20c3_initial_schema.py
apps/api/tests/: conftest.py  test_council_mock.py  test_health.py  test_idea_flow.py  test_scoring.py
apps/web/src/app/: globals.css  layout.tsx
docs/: STATUS.md
(+24 files in other folders)
