[project]
name = "mcos-api"
version = "0.1.0"
description = "Mission Control OS — control plane API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
# Real model providers — only needed when ENABLE_REAL_MODELS=true.
real = [
    "openai>=1.40",
    "anthropic>=0.34",
]
# Real Postgres driver — only needed when you switch DATABASE_URL off SQLite.
postgres = [
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
